tests/rosetta/out/Smalltalk/array-concatenation.out
Object: '' error: Invalid argument 60: must be a Character
SystemExceptions.WrongClass(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:778)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:774)
String(Object)>>checkIndexableBounds:put: (Object.st:825)
String>>at:put: (String.st:329)
String(SequenceableCollection)>>replaceFrom:to:with:startingAt: (SeqCollect.st:558)
String>>replaceFrom:to:with:startingAt: (String.st:296)
String(SequenceableCollection)>>replaceFrom:to:with: (SeqCollect.st:572)
Array(Collection)>>asString (Collection.st:438)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/array-concatenation.st:26)
Object: '' error: Invalid argument Young: must be a Character
SystemExceptions.WrongClass(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:778)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:"Global garbage collection... done"
774)
String(Object)>>checkIndexableBounds:put: (Object.st:825)
String>>at:put: (String.st:329)
String(SequenceableCollection)>>replaceFrom:to:with:startingAt: (SeqCollect.st:558)
String>>replaceFrom:to:with:startingAt: (String.st:296)
String(SequenceableCollection)>>replaceFrom:to:with: (SeqCollect.st:572)
Array(Collection)>>asString (Collection.st:438)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/array-concatenation.st:29)
Object: '' error: Invalid argument 60: must be a Character
SystemExceptions.WrongClass(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:778)
SystemExceptions.WrongClass class>>signalOn:mustBe: (SysExcept.st:774)
String(Object)>>checkIndexableBounds:put: (Object.st:825)
String>>at:put: (String.st:329)
String(SequenceableCollection)>>replaceFrom:to:with:startingAt: (SeqCollect.st:558)
String>>replaceFrom:to:with:startingAt: (String.st:296)
String(SequenceableCollection)>>replaceFrom:to:with: (SeqCollect.st:572)
Array(Collection)>>asString (Collection.st:438)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/array-concatenation.st:32)
