tests/rosetta/out/Smalltalk/array-concatenation.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| a b concatAny concatInts i j l m out |
concatInts := [:a :b | out := {}.
a do: [:v |
  out := out copyWith: v.
]
.
b do: [:v |
  out := out copyWith: v.
]
.
out ].
concatAny := [:a :b | out := {}.
a do: [:v |
  out := out copyWith: v.
]
.
b do: [:v |
  out := out copyWith: v.
]
.
out ].
a := {1. 2. 3}.
b := {7. 12. 60}.
Transcript show: ((concatInts value: a value: b asString)) printString; cr.
i := {1. 2. 3}.
j := {'Crosby'. 'Stills'. 'Nash'. 'Young'}.
Transcript show: ((concatAny value: i value: j asString)) printString; cr.
l := {1. 2. 3}.
m := {7. 12. 60}.
Transcript show: ((concatInts value: l value: m asString)) printString; cr.
